// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processUpload Uploads and updates redux correctly when there are no errors with cellranger v2 1`] = `
[
  {
    "compressed": true,
    "errors": "",
    "fileObject": {
      "name": "genes.tsv.gz",
      "path": "/WT13/genes.tsv.gz",
      "size": 100,
      "type": "application/gzip",
    },
    "name": "genes.tsv.gz",
    "upload": {
      "status": "uploading",
    },
    "valid": true,
  },
  {
    "compressed": true,
    "errors": "",
    "fileObject": {
      "name": "barcodes.tsv.gz",
      "path": "/WT13/barcodes.tsv.gz",
      "size": 100,
      "type": "application/gzip",
    },
    "name": "barcodes.tsv.gz",
    "upload": {
      "status": "uploading",
    },
    "valid": true,
  },
  {
    "compressed": true,
    "errors": "",
    "fileObject": {
      "name": "matrix.mtx.gz",
      "path": "/WT13/matrix.mtx.gz",
      "size": 100,
      "type": "application/gzip",
    },
    "name": "matrix.mtx.gz",
    "upload": {
      "status": "uploading",
    },
    "valid": true,
  },
]
`;

exports[`processUpload Uploads and updates redux correctly when there are no errors with cellranger v2 2`] = `
[
  {
    "data": "loadedGzippedFile",
    "headers": {
      "Content-Type": "application/octet-stream",
    },
    "method": "put",
    "onUploadProgress": [Function],
    "url": "theSignedUrl",
  },
  {
    "data": "loadedGzippedFile",
    "headers": {
      "Content-Type": "application/octet-stream",
    },
    "method": "put",
    "onUploadProgress": [Function],
    "url": "theSignedUrl",
  },
  {
    "data": "loadedGzippedFile",
    "headers": {
      "Content-Type": "application/octet-stream",
    },
    "method": "put",
    "onUploadProgress": [Function],
    "url": "theSignedUrl",
  },
]
`;

exports[`processUpload Uploads and updates redux correctly when there are no errors with cellranger v3 1`] = `
[
  {
    "compressed": true,
    "errors": "",
    "fileObject": {
      "name": "features.tsv.gz",
      "path": "/WT13/features.tsv.gz",
      "size": 100,
      "type": "application/gzip",
    },
    "name": "features.tsv.gz",
    "upload": {
      "status": "uploading",
    },
    "valid": true,
  },
  {
    "compressed": true,
    "errors": "",
    "fileObject": {
      "name": "barcodes.tsv.gz",
      "path": "/WT13/barcodes.tsv.gz",
      "size": 100,
      "type": "application/gzip",
    },
    "name": "barcodes.tsv.gz",
    "upload": {
      "status": "uploading",
    },
    "valid": true,
  },
  {
    "compressed": true,
    "errors": "",
    "fileObject": {
      "name": "matrix.mtx.gz",
      "path": "/WT13/matrix.mtx.gz",
      "size": 100,
      "type": "application/gzip",
    },
    "name": "matrix.mtx.gz",
    "upload": {
      "status": "uploading",
    },
    "valid": true,
  },
]
`;

exports[`processUpload Uploads and updates redux correctly when there are no errors with cellranger v3 2`] = `
[
  {
    "data": "loadedGzippedFile",
    "headers": {
      "Content-Type": "application/octet-stream",
    },
    "method": "put",
    "onUploadProgress": [Function],
    "url": "theSignedUrl",
  },
  {
    "data": "loadedGzippedFile",
    "headers": {
      "Content-Type": "application/octet-stream",
    },
    "method": "put",
    "onUploadProgress": [Function],
    "url": "theSignedUrl",
  },
  {
    "data": "loadedGzippedFile",
    "headers": {
      "Content-Type": "application/octet-stream",
    },
    "method": "put",
    "onUploadProgress": [Function],
    "url": "theSignedUrl",
  },
]
`;
